--- a/params/drivetrain_node.yaml
+++ b/params/drivetrain_node.yaml
@@ -1,14 +1,14 @@
 left_master_id: 1
-left_follower_ids: [2, 3]
+left_follower_ids: []   #Normally left_follower_ids: [2, 3] 
 left_sensor_inverted: false
 left_master_inverted: false
-left_follower_inverted: [false, false]
+left_follower_inverted: []    #Normally left_follower_inverted: [false, false] 
 
 right_master_id: 4
-right_follower_ids: [5, 6]
+right_follower_ids: []    #Normally right_follower_ids: [5, 6]
 right_sensor_inverted: false
 right_master_inverted: true
-right_follower_inverted: [false, false]
+right_follower_inverted: []   #Normally right_follower_inverted: [false, false]
 
 motor_type: 0    #0 = TalonFX, 1 = TalonSRX
 
