--- a/params/robot_localization_ukf.yaml
+++ b/params/robot_localization_ukf.yaml
@@ -149,16 +149,16 @@ odom0_relative: true
 # twist0_rejection_threshold: 2
 # twist0_nodelay: false
 
-# imu0: example/imu
-# imu0_config: [false, false, false,
-#               true,  true,  true,
-#               false, false, false,
-#               true,  true,  true,
-#               true,  true,  true]
-# imu0_nodelay: false
-# imu0_differential: false
-# imu0_relative: true
-# imu0_queue_size: 5
+imu0: /RobotIMU
+imu0_config: [false, false, false,
+              true,  true,  true,
+              false, false, false,
+              false,  false,  false,
+              false,  false,  false]
+imu0_nodelay: false
+imu0_differential: false
+imu0_relative: true
+imu0_queue_size: 5
 # imu0_pose_rejection_threshold: 0.8                 # Note the difference in parameter names
 # imu0_twist_rejection_threshold: 0.8                #
 # imu0_linear_acceleration_rejection_threshold: 0.8  #
