--- a/params/robot_localization_ukf.yaml
+++ b/params/robot_localization_ukf.yaml
@@ -54,7 +54,7 @@ debug_out_file: /path/to/debug/file.txt
 #     3a. Set your "world_frame" to your map_frame value
 #     3b. MAKE SURE something else is generating the odom->base_link transform. Note that this can even be another state
 #         estimation node from robot_localization! However, that instance should *not* fuse the global data.
-map_frame: map              # Defaults to "map" if unspecified
+# map_frame: map              # Defaults to "map" if unspecified
 odom_frame: odom            # Defaults to "odom" if unspecified
 base_link_frame: base_link  # Defaults to "base_link" if unspecified
 world_frame: odom           # Defaults to the value of odom_frame if unspecified
@@ -76,7 +76,7 @@ odom0: RobotOdometry
 odom0_config: [false, false, false,
                false, false, false,
                true,  true,  true,
-               true,  true,  true,
+               false,  false,  false,
                false, false, false]
 
 # If you have high-frequency data or are running with a low frequency parameter value, then you may want to increase
@@ -149,23 +149,23 @@ odom0_relative: true
 # twist0_rejection_threshold: 2
 # twist0_nodelay: false
 
-imu0: /RobotIMU
-imu0_config: [false, false, false,
-              true,  true,  true,
-              false, false, false,
+odom1: /RobotIMU
+odom1_config: [false,  false,  false,
+              false,  false,  true,
+              false,  false,  false,
               false,  false,  false,
               false,  false,  false]
-imu0_nodelay: false
-imu0_differential: false
-imu0_relative: true
-imu0_queue_size: 5
+odom1_nodelay: false
+odom1_differential: false
+odom1_relative: true
+odom1_queue_size: 5
 # imu0_pose_rejection_threshold: 0.8                 # Note the difference in parameter names
 # imu0_twist_rejection_threshold: 0.8                #
 # imu0_linear_acceleration_rejection_threshold: 0.8  #
 
 # [ADVANCED] Some IMUs automatically remove acceleration due to gravity, and others don't. If yours doesn't, please set
 # this to true, and *make sure* your data conforms to REP-103, specifically, that the data is in ENU frame.
-imu0_remove_gravitational_acceleration: true
+# imu0_remove_gravitational_acceleration: true
 
 # [ADVANCED]  The EKF and UKF models follow a standard predict/correct cycle. During prediction, if there is no
 # acceleration reference, the velocity at time t+1 is simply predicted to be the same as the velocity at time t. During
@@ -232,7 +232,7 @@ initial_estimate_covariance: [1e-9, 0,    0,    0,    0,    0,    0,    0,    0,
                               0,    0,    1e-9, 0,    0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
                               0,    0,    0,    1e-9, 0,    0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
                               0,    0,    0,    0,    1e-9, 0,    0,    0,    0,    0,     0,     0,     0,    0,    0,
-                              0,    0,    0,    0,    0,    1e-9, 0,    0,    0,    0,     0,     0,     0,    0,    0,
+                              0,    0,    0,    0,    0,    1000, 0,    0,    0,    0,     0,     0,     0,    0,    0,
                               0,    0,    0,    0,    0,    0,    1000, 0,    0,    0,     0,     0,     0,    0,    0,
                               0,    0,    0,    0,    0,    0,    0,    1e-9, 0,    0,     0,     0,     0,    0,    0,
                               0,    0,    0,    0,    0,    0,    0,    0,    1e-9, 0,     0,     0,     0,    0,    0,
