--- a/params/teb_local_planner.yaml
+++ b/params/teb_local_planner.yaml
@@ -14,15 +14,15 @@ feasibility_check_no_poses: 5
 
 # Robot
 
-max_vel_x: 0.4
-max_vel_x_backwards: 0.2
-max_vel_theta: 0.3
-acc_lim_x: 0.5
-acc_lim_theta: 0.5
+max_vel_x: 3
+max_vel_x_backwards: 3
+max_vel_theta: 6
+acc_lim_x: 1.5
+acc_lim_theta: 1.5
 min_turning_radius: 0.0
 footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
-  type: "point"
-  radius: 0.2 # for type "circular"
+  type: "circular"
+  radius: 0.905 # for type "circular"
   line_start: [-0.3, 0.0] # for type "line"
   line_end: [0.3, 0.0] # for type "line"
   front_offset: 0.2 # for type "two_circles"
@@ -33,8 +33,8 @@ footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
 
 # GoalTolerance
 
-xy_goal_tolerance: 0.2
-yaw_goal_tolerance: 0.1
+xy_goal_tolerance: 0.07
+yaw_goal_tolerance: 0.07
 free_goal_vel: False
 
 # Obstacles
