--- a/params/teb_local_planner.yaml
+++ b/params/teb_local_planner.yaml
@@ -14,11 +14,11 @@ feasibility_check_no_poses: 5
 
 # Robot
 
-max_vel_x: 3
-max_vel_x_backwards: 3
-max_vel_theta: 6
-acc_lim_x: 1.5
-acc_lim_theta: 1.5
+max_vel_x: 1
+max_vel_x_backwards: 1
+max_vel_theta: 1
+acc_lim_x: .5
+acc_lim_theta: 1
 min_turning_radius: 0.0
 footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
   type: "circular"
